# TerraKubePromoter

./: .gitignore  README.md
.github/workflows/: app-ci.yml  manifests-ci.yml  promote.yml  terraform-ci.yml
app/: .dockerignore  Dockerfile  docker-bake.hcl  pyproject.toml  requirements-dev.txt  requirements.txt
app/src/: main.py
app/tests/: test_main.py
argocd/: main.tf  outputs.tf  values.yaml
argocd/applications/: terrakubepromoter-dev.yaml  terrakubepromoter-production.yaml  terrakubepromoter-staging.yaml
argocd/bootstrap/: root-application.yaml
argocd/projects/: terrakubepromoter.yaml
docs/: repository_structure.md
docs/ADR/: 0001-select-gitops-with-argocd.md  0002-exclude-argo-rollouts-from-scope.md  0003-use-lightweight-flask-workload.md
manifests/base/: deployment.yaml  kustomization.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
manifests/components/networkpolicy/: kustomization.yaml  networkpolicy.yaml
manifests/overlays/dev/: kustomization.yaml  namespace.yaml  networkpolicy.yaml  resourcequota.yaml
manifests/overlays/production/: kustomization.yaml  namespace.yaml  resourcequota.yaml
manifests/overlays/staging/: kustomization.yaml  namespace.yaml  resourcequota.yaml
scripts/: configure-github-repo.sh  resolve-action-shas.sh  verify-oidc-roles.sh  verify-tagging.sh
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/argocd/: variables.tf
terraform/modules/backend/: main.tf  outputs.tf  variables.tf
(+49 files in other folders)
