# =============================================================================
# Python project configuration
# =============================================================================
# pytest configuration follows the native TOML data model introduced in
# pytest 9.0 (PEP 518). The [tool.pytest] table replaces the legacy
# [tool.pytest.ini_options] compatibility mode for new projects.
#
# Reference: https://docs.pytest.org/en/stable/reference/customize.html
# =============================================================================

[project]
name = "terrakubepromoter-app"
dynamic = ["version"]
description = "Flask application promoted across environments via ArgoCD GitOps"
requires-python = ">=3.13"
dependencies = [
  "Flask==3.1.3",
  "gunicorn==25.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
]

[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.pytest.ini_options]
minversion = "9.0"
pythonpath = ["."]
testpaths = ["tests"]
